--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "javascript-brunch": ">=1.7.1",
     "jshint-brunch": "^1.7.0",
     "lodash": "^4.17.4",
+    "nodemon": "^1.12.5",
     "parallelshell": "^2.0.0",
     "pg": "^6.1.0",
     "socket.io": "^1.5.1"
