--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^1.12.5",
     "parallelshell": "^2.0.0",
     "pg": "^6.1.0",
-    "socket.io": "^1.5.1"
+    "socket.io": "^1.5.1",
+    "yarn": "^1.3.2"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
