--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "javascript-brunch": ">=1.7.1",
     "jshint-brunch": "^1.7.0",
     "lodash": "^4.17.4",
-    "nodemon": "^1.12.5",
     "parallelshell": "^2.0.0",
     "pg": "^6.1.0",
-    "socket.io": "^1.5.1",
-    "yarn": "^1.3.2"
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
@@ -34,14 +32,17 @@
     "startclient": "cd ./client && npm run start",
     "buildclient": "cd ./client && npm run build",
     "clean": "if [ -d ./build ]; then rm -r ./build; fi",
-    "startserver": "export NODE_PATH=. && nodemon run.js",
+    "startserver": "export NODE_PATH=. && npm run migratedb && nodemon run.js",
     "createbuild": "[ -d build ] || mkdir build ",
     "build": "export NODE_PATH=. && npm run clean && npm run createbuild && npm run buildclient && mv client/build build/static && cp -R server build/server && mkdir -p build/client/src && cp -r client/src/common build/client/src && cp run.js build && cp runserver.sh build",
-    "test": "export NODE_PATH=. && ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine.json",
-    "test-watch": "export NODE_PATH=. && nodemon ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine.json",
+    "test:watch": "export NODE_PATH=. && nodemon ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine.json",
+    "test:nowatch": "export NODE_PATH=. && ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine.json",
     "apitest": "export NODE_PATH=. && nodemon ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine-apitest.json",
+    "apitest:nowatch": "export NODE_PATH=. && ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine-apitest.json",
     "loadtest": "export NODE_PATH=. && nodemon ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine-loadtest.json",
-    "migratedb": "db-migrate --config ./server/database.json --migrations-dir ./server/migrations up",
+    "loadtest:nowatch": "export NODE_PATH=. && ./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine-loadtest.json",
+    "migratedb:dev": "db-migrate -e dev --config ./server/database.json --migrations-dir ./server/migrations up",
+    "migratedb:prod": "db-migrate -e prod --config ./server/database.json --migrations-dir ./server/migrations up",
     "startpostgres": "docker run -p 5432:5432 --name pg2 -e POSTGRES_PASSWORD=mysecretpassword -d postgres 2>/dev/null || docker start pg2 && docker ps | grep pg2",
     "connectdockerdb": "docker run -it --rm --link pg2:postgres postgres psql -h postgres -U postgres"
   }
